add controllers layer